--- a/doc/Makefile
+++ b/doc/Makefile
@@ -8,6 +8,7 @@ PAPER         =
 BUILDDIR      = build
 
 # Internal variables.
+GH_PAGES_SOURCES = source Makefile
 PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
