--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -45,7 +45,7 @@ ssh_users:
     uid: 1015
 
   - name: cem
-    groups: users,mcnpx,mcnp6,njoy,serpent,origin
+    groups: users,mcnpx,mcnp6,njoy,serpent,origin,sudo
     shell: /bin/bash
     uid: 1016
 
